MP4 demux lock-up
The attached file seemingly drivers the MP4 demuxer into an infinite busy loop.
To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information
Link issues together to show that they're related.
Learn more.
Activity
-
Newest first Oldest first
-
Show all activity Show comments only Show history only
- Rémi Denis-Courmont added Component::Demuxers Severity::normal Type::bug Version::master git + 1 deleted label
added Component::Demuxers Severity::normal Type::bug Version::master git + 1 deleted label
- Rémi Denis-Courmont changed milestone to %Bugs paradize
changed milestone to %Bugs paradize
- Author Maintainer
Added attachment:
Added attachment:
Added attachment:
The recently applied fix (55d4aff) for this ticket does not work as it should, the newly attached samples (
freeze_2-*
,freeze_3-*
) still causes the demuxer to end up in an infinite loop.The below linked patch, which was rejected, is able to correctly reject all three of the samples now attached to this ticket.
- [redacted]
- Developer
- François Cartegnie added Status::fixed label
added Status::fixed label
- François Cartegnie closed
closed
- Jean-Baptiste Kempf added Component::Demuxers: MP4 label and removed Component::Demuxers label
added Component::Demuxers: MP4 label and removed Component::Demuxers label
Please register or sign in to reply