demux: libmp4: reject truncated boxes (fix #17584)